--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.0.2",
     "auth": "^0.0.9",
     "aws-amplify": "^4.2.7",
+    "formik": "^2.2.9",
     "framer-motion": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
